# src/configs/swagger.json
@@ -8,6 +8,7 @@
   "paths": {
     "/auth": {
       "post": {
+        "summary": "Login in the API",
         "description": "Login in the API",
         "parameters": [
           {
@@ -43,6 +44,7 @@
     },
     "/auth/create": {
       "post": {
+        "summary": "Create a new User",
         "description": "Create a new User",
         "parameters": [
           {
@@ -65,6 +67,36 @@
             "description": "OK",
             "schema": {
               "$ref": "#/definitions/UserReturn"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Not valid"
+          }
+        }
+      }
+    },
+    "/questions": {
+      "post": {
+        "summary": "Add new Question",
+        "description": "Add new Question",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "question",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewQuestion"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "CREATED",
+            "schema": {
+              "$ref": "#/definitions/Question"
             }
           },
           "400": {
@@ -121,7 +153,7 @@
         }
       }
     },
-    "UpdateQuestion": {
+    "Question": {
       "allOf": [
         {
           "$ref": "#/definitions/NewQuestion"
